Fixed responsive issues with jumping

--- a/app/components/back-to-top/_back-to-top.scss
+++ b/app/components/back-to-top/_back-to-top.scss
@@ -19,7 +19,7 @@
     top: calc(100% - #{govuk-spacing(8)});
     bottom: auto;
     left: auto;
-    margin-left: -290px;
+    margin-left: -260px;
   }
 
   .js-enabled .app-back-to-top--hidden .app-back-to-top__link {
